# cs6610

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_windows.bat  download_assets.sh  package_assets.sh  renderdoc_settings.cap  upload_assets.sh
cmake/: cxxopts.cmake.in  eigen.cmake.in  entt.cmake.in  freeglut.cmake.in  glfw.cmake.in  glm.cmake.in  imgui.cmake.in  libspng.cmake.in  spdlog.cmake.in
include/: app.hpp  camera.hpp  compute_shader.hpp  extmath.hpp  gfx.hpp  light.hpp  mesh.hpp  model.hpp  physics.hpp  surface_net.hpp  texture.hpp
lib/include/: cyGL.h  gleq.h
lib/include/glad/: glad.h
lib/src/: glad.c
reports/: CS6160_final.md  CS6160_midproject.md  project1.md  project2.md  project3.md  project4.md  project5.md  project6.md  project7.md  project8.md
resources/: .gitignore
resources/shaders/: basic.frag  basic.geom  basic.vert  gen_vertices.comp  points.frag  points.geom  shadow.frag  shadow.vert  sky.frag  sky.vert  surface_net.comp  wireframe.frag  wireframe.geom  wireframe.tesc  wireframe.tese  wireframe.vert  wires.frag  wires.vert
resources/textures/: .gitignore
resources/vmodels/: cube.ele  cube.node
src/: app.cpp  camera.cpp  compute_shader.cpp  extmath.cpp  gfx.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  physics.cpp  surface_net.cpp  texture.cpp
